[gd_scene load_steps=5 format=2]

[ext_resource path="res://rooms/BaseRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://rooms/Interview.gd" type="Script" id=2]
[ext_resource path="res://rooms/PublicPool.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/InterviewUi.tscn" type="PackedScene" id=4]

[node name="Interview" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PublicPool" parent="." index="0" instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]
layer = 0

[node name="UI" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]

[connection signal="dive_results_displayed" from="PublicPool" to="." method="_on_PublicPool_dive_results_displayed"]
[connection signal="main_menu_button_pressed" from="PublicPool" to="." method="_on_PublicPool_main_menu_button_pressed"]
[connection signal="retry_button_pressed" from="PublicPool" to="." method="_on_PublicPool_retry_button_pressed"]
